# thelens

./: .env.example  .gitignore  README.md  pyproject.toml
config/: models.yaml  questions.yaml
docs/: CLAUDE.md  SPEC.md
docs/site-review/: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml  setup.sh
docs/site-review/config/: layout_schema.json  models.yaml  questions.yaml
docs/site-review/docs/: DATA_MODELS.md
docs/site-review/prompts/: 01_classification.md  02_persona_generation.md  03_page_blind_query_generation.md  04_persona_review.md  05_synthesis.md  06_verification.md
prompts/: 00_crawl_plan.md  01_classification.md  02_persona_generation.md  03_page_blind_query_generation.md  04_persona_review.md  05_synthesis.md  06_verification.md
src/thelens/: __init__.py  app.py  cli.py  config.py  models.py  storage.py
src/thelens/llm/: anthropic_client.py  base.py  codemie_client.py  factory.py  gemini_client.py  openai_client.py  retry.py
src/thelens/pipeline/: _extract.py  audit.py  classify.py  corpus.py  crawl.py  discover.py  fetch.py  multi_llm.py  persona_review.py  personas.py  plan.py  run.py  sitemap.py  synthesize.py
src/thelens/render/: html.py
templates/: report.html.j2
