[project]
name = "site-review"
version = "0.1.0"
description = "Local-first multi-LLM website audit tool"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # HTTP and rendering
    "httpx>=0.27.0",
    "playwright>=1.46.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",

    # Data and config
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",

    # Templating and rendering
    "jinja2>=3.1.4",
    "python-pptx>=1.0.0",
    "pillow>=10.4.0",

    # LLM SDKs
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-generativeai>=0.8.0",
    "xai-sdk>=0.1.0",

    # Misc utility
    "tenacity>=8.5.0",
    "tiktoken>=0.7.0",  # token counting for cost estimates
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
site-review = "site_review.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/site_review"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests requiring live API access",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
